cleaned comments, updated footer and readme

--- a/index.html
+++ b/index.html
@@ -84,7 +84,7 @@
     </div>
 
     <footer>
-        <p>&copy; 2025 kbussey829</p>
+        <p>&copy; 2025 kbussey829. <a href = "https://github.com/kbussey829/meal-maker">Source code</a></p>
     </footer>
 
     <script src = "script.js"></script>
